# libreactor

./: .clang-format  .travis.yml  AUTHORS  CHANGES  COPYING  ChangeLog  Dockerfile  LICENSE  Makefile.am  NEWS  NOTES  README.md  README.rst  TODO  api.rst  autogen.sh  buffer.c  buffer.h  configure.ac  libreactor.pc.in  main.c  makefile  reactor.c  reactor.h  reactor_client.c  reactor_client.h  reactor_fd.c  reactor_fd.h  reactor_resolver.c  reactor_resolver.h  reactor_signal.c  reactor_signal.h  reactor_signal_dispatcher.c  reactor_signal_dispatcher.h  reactor_socket.c  reactor_socket.h  reactor_timer.c  reactor_timer.h  test1.c  test2.c  (+5 more)
.github/workflows/: build.yml
docs/: Makefile.am  apireference.rst  changes.rst  conf.py  index.rst
example/: Makefile.am  benchmark_http.c  client.c  core.c  couch.c  descriptor.c  example.c  fd.c  hello.c  http-performance.c  http.c  http_client.c  http_proxy.c  http_server.c  httpd.c  httpd_lowlevel.c  httpserver1.c  httpserver2.c  lookup.c  notify.c  pool.c  producer.c  request.c  resolve_async.c  resolve_sync.c  resolver.c  responder.c  responder2.c  responder3.c  rest_server.c  restserver.c  server-ssl.c  server.c  server_single.c  simple.c  stream.c  string.c  task.c  tcp.c  tcp_client.c  (+8 more)
example/certs/: generate.sh
old/: Makefile.am
old/src/reactor_core/: reactor_signal_dispatcher.h  reactor_stream.h  reactor_timer.c  reactor_user.c
old/test/: reactor_core.c  reactor_stream.c  stubs.c
src/: reactor.c  reactor.h  reactor_client.c  reactor_client.h  reactor_core.c  reactor_core.h  reactor_fd.c  reactor_fd.c~  reactor_fd.h  reactor_resolver.h  reactor_signal.h  reactor_signal_dispatcher.c  reactor_socket.c  reactor_socket.h
src/http/: http.c  http.h
src/notify/: notify.c  notify.h
src/picohttpparser/: picohttpparser.c  picohttpparser.h
src/reactor/: async.c  async.h  buffer.c  buffer.h  core.c  core.h  data.c  data.h  descriptor.c  descriptor.h  event.c  event.h  hash.c  hash.h  http.c  http.h  list.c  list.h  map.c  map.h  mapi.c  mapi.h  maps.c  maps.h  net.c  net.h  notify.c  notify.h  pointer.c  pointer.h  reactor.c  reactor.h  reactor_assert.c  reactor_assert.h  reactor_core.c  reactor_core.h  reactor_couch.c  reactor_couch.h  reactor_desc.c  reactor_descriptor.c  (+52 more)
src/reactor_core/: reactor_core.c  reactor_core.h  reactor_desc.c  reactor_desc.h  reactor_event.c  reactor_event.h  reactor_http.c  reactor_http.h  reactor_resolver.c  reactor_resolver.h  reactor_rest.c  reactor_rest.h  reactor_signal.c  reactor_signal.h  reactor_signal_dispatcher.c  reactor_signal_dispatcher.h  reactor_stream.c  reactor_stream.h  reactor_tcp.c  reactor_tcp.h  reactor_timer.c  reactor_timer.h  reactor_user.h
test/: async.c  buffer.c  core.c  coverage.sh  data.c  descriptor.c  event.c  hash.c  http.c  list.c  list2.c  map.c  mapi.c  maps.c  mock.c  net.c  notify.c  pointer.c  reactor.c  reactor_assert.c  reactor_core.c  reactor_desc.c  reactor_descriptor.c  reactor_http.c  reactor_pool.c  reactor_resolver.c  reactor_signal.c  reactor_stream.c  reactor_tcp.c  reactor_timer.c  reactor_user.c  reactor_util.c  resolver.c  server.c  stream.c  string.c  test1.c  test2.c  test4.c  test_reactor_core.c  (+6 more)
test/data/: cert.pem  request-2-allow  request-4-allow  request-4-deny  request-7-deny  request-8-deny  request-9-deny  response-1-allow  response-2-deny  response-3-allow  response-4-deny
test/data/http/: request-2-deny  request-3-deny  response-4-allow  response-5-deny
test/files/: key.pem  request-1-deny  request-3-allow  request-5-allow  request-6-deny  response-2-allow  response-3-deny  response-4-allow
